syntax = "proto3";

option csharp_namespace = "Autobarn.PricingEngine";

package price;

// The greeting service definition.
service Pricer {
  // Sends a greeting
  rpc GetPrice (PriceRequest) returns (PriceReply);
}

// The request message containing the user's name.
message PriceRequest {
  string color = 1;
  string manufacturer = 2;
  string model = 3;
  int32 year = 4;
}

// The response message containing the greetings.
message PriceReply {
  int32 price = 1;
  string currencyCode = 2;
}
